WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34046
Video that loads inside reflection doesn't get reflected
https://bugs.webkit.org/show_bug.cgi?id=34046
Summary
Video that loads inside reflection doesn't get reflected
Simon Fraser (smfr)
Reported
2010-01-23 21:45:13 PST
There's an issue with reflected video, where if the video is set up after the reflection, the video doesn't show in the reflection.
Attachments
Patch
(117.61 KB, patch)
2010-01-23 21:57 PST
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-01-23 21:57:44 PST
Created
attachment 47286
[details]
Patch
Darin Adler
Comment 2
2010-01-24 09:31:43 PST
Comment on
attachment 47286
[details]
Patch
> + <p>You should see a reflected video below, and no red.</p>
The color bars in the video do contain red. r=me
Simon Fraser (smfr)
Comment 3
2010-01-24 09:47:36 PST
http://trac.webkit.org/changeset/53779
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug